# buckets

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  LICENSE-APACHE  README.md  validate_android.sh
.claude-plugin/: marketplace.json  plugin.json
.dejavue/: context.md  decisions.md  handoff.md  plan.md  state.md  timeline.jsonl
.jagent/: PROJECT.md  TODO.md
.jagent/planning/: README.md  ROADMAP.md  RULES.md  STATE.md  TASKS.md
.jagent/planning/templates/: issue.md  ticket.md
.jagent/planning/tickets/: .gitkeep  BUCKETS-1-proot-spike.md  BUCKETS-10-buck-net-isolated-networks.md  BUCKETS-11-buck-herd.md  BUCKETS-12-herd-controller-dead-code.md  BUCKETS-2-proot-backend.md  BUCKETS-3-android-validation.md  BUCKETS-4-cargo-spec.md  BUCKETS-5-local-pantry-overrides.md  BUCKETS-6-cellar-cache-locking.md  BUCKETS-7-cli-diagnostic-cleanups.md  BUCKETS-8-local-path-spec.md  BUCKETS-9-bucketfile-spec-engine.md
skills/buckets-usage/: SKILL.md
src/: bucketfile.rs  cellar.rs  config.rs  env.rs  gui.rs  herd.rs  index.rs  install.rs  inventory.rs  lib.rs  main.rs  net.rs  project.rs  resolve.rs  sandbox.rs  session.rs  site.rs  swarm.rs  types.rs  worktree.rs
