[package]
# Published as "crush-buckets" — "buckets" is already taken on crates.io by an
# unrelated crate. The CLI binary stays named `buckets` (bin name is independent
# of package name), so nothing about the user-facing command changes.
name = "crush-buckets"
version = "0.1.0"
description = "Throwaway runtime buckets for AI agents — resolve, fetch, and run any tool in an isolated environment"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/nixpt/buckets"
readme = "README.md"
keywords = ["sandbox", "agent", "runtime", "bwrap", "isolation"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "buckets"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
ureq = { version = "2", features = ["gzip"] }
tar = "0.4"
xz2 = "0.1"
regex = "1"
url = "2"
toml = "0.8"
fd-lock = "4"
shlex = "1"
libc = "0.2"


[profile.release]
strip = true
lto = true
codegen-units = 1
